# calico-doom

./: CMakeLists.txt  COPYING.txt  LICENSE-ICON.txt  README.md
cmake/Modules/: FindSDL2.cmake  FindSDL2_mixer.cmake
shaders/: default.frag  default.vert  sepia.frag
src/: CMakeLists.txt  am_main.c  comnjag.c  d_main.c  doomdata.h  doomdef.h  f_main.c  g_game.c  g_options.cpp  g_options.h  in_main.c  info.c  info.h  j_eeprom.c  jagcry.c  jagcry.h  jagonly.c  jagpad.h  keywords.h  m_argv.c  m_argv.h  m_main.c  music.h  o_main.c  p_base.c  p_ceilng.c  p_change.c  p_doors.c  p_enemy.c  p_floor.c  p_inter.c  p_lights.c  p_local.h  p_map.c  p_maputl.c  p_mobj.c  p_move.c  p_plats.c  p_pspr.c  p_setup.c  (+36 more)
src/elib/: atexit.cpp  atexit.h  bdlist.h  binary.h  compare.h  configfile.cpp  configfile.h  dllist.h  elib.h  esmartptr.h  m_argv.c  m_argv.h  m_ctype.h  misc.cpp  misc.h  parser.cpp  parser.h  qstring.cpp  qstring.h  swap.h  zone.cpp  zone.h
src/gl/: gl_drawcmd.cpp  gl_drawcmd.h  gl_framebuffer.cpp  gl_framebuffer.h  gl_render.cpp  gl_render.h  gl_textures.cpp  gl_textures.h  resource.cpp  resource.h
src/gl4/: gl4_buffers.cpp  gl4_buffers.h  gl4_render.cpp  gl4_render.h
src/hal/: hal_init.c  hal_init.h  hal_input.c  hal_input.h  hal_ml.c  hal_ml.h  hal_platform.c  hal_platform.h  hal_sfx.c  hal_sfx.h  hal_timer.c  hal_timer.h  hal_types.h  hal_video.c  hal_video.h
src/posix/: posix_main.c  posix_platform.cpp  posix_platform.h
src/rb/: dllist.h  rb_common.h  rb_draw.cpp  rb_draw.h  rb_main.cpp  rb_main.h  rb_shader.cpp  rb_shader.h  rb_texture.cpp  rb_texture.h  rb_types.h  rb_vao.cpp  rb_vao.h  valloc.cpp  valloc.h
src/renderintr/: ri_interface.cpp  ri_interface.h
src/sdl/: sdl_hal.c  sdl_hal.h  sdl_init.c  sdl_init.h  sdl_input.cpp  sdl_input.h  sdl_sound.c  sdl_sound.cpp  sdl_sound.h  sdl_timer.cpp  sdl_timer.h  sdl_video.cpp  sdl_video.h
src/win32/: win32_main.c  win32_platform.c  win32_platform.h
vc2012/: calico-doom.vcxproj  calico-doom.vcxproj.filters
vc2015/: .gitignore  calico-doom.rc  calico-doom.sln  calico-doom.vcxproj  calico-doom.vcxproj.filters  resource.h
